Kubernetes/hello-k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s-ingress
  labels:
    app: hello-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hello-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-k8s-service
            port:
              number: 80
